@@ -105,6 +105,7 @@ DelugeUSR = your username
 DelugePWD = your password
 ###### ADVANCED USE - ONLY EDIT IF YOU KNOW WHAT YOU'RE DOING ######
 deleteOriginal = 0
+forceClean = 0
 
 [Extensions]
 compressedExtensions = .zip,.rar,.7z,.gz,.bz,.tar,.arj,.1,.01,.001
